[gd_scene load_steps=8 format=3 uid="uid://ckyybwba7ypur"]

[ext_resource type="PackedScene" uid="uid://clcnrrgit18fj" path="res://Global_Scenes/Debug/Command_Edit/2D/Command_Preview_Object.tscn" id="1_rpoph"]
[ext_resource type="Script" uid="uid://uqvnp6rfu1j4" path="res://Global_Scenes/Debug/Command_Edit/Play_Anim/Scripts/Play_Anim.gd" id="2_jvcu2"]
[ext_resource type="PackedScene" uid="uid://dmysqox083lhl" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Bool.tscn" id="2_ryuio"]
[ext_resource type="PackedScene" uid="uid://ceaqnana6y842" path="res://Global_Scenes/Debug/Scenes/Value_Select/Var_Select.tscn" id="3_1xxyo"]
[ext_resource type="PackedScene" uid="uid://cnpcrhnjo25h1" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Options.tscn" id="4_iycfs"]
[ext_resource type="PackedScene" uid="uid://bwjadxl0em04t" path="res://Global_Scenes/Debug/Command_Edit/Play_Anim/Anim_Keep_Dir.tscn" id="5_hjtsj"]
[ext_resource type="PackedScene" uid="uid://dg4df175aufiv" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Slider.tscn" id="6_2ctf1"]

[node name="Play_Anim" instance=ExtResource("1_rpoph")]
script = ExtResource("2_jvcu2")
_e_draw_grid = false
_e_draw_grid_scene = null

[node name="Object" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="0"]
_e_needed_comps = Array[String](["Reference", "Anims"])

[node name="Keep_Dir" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="1" instance=ExtResource("2_ryuio")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_KEEP_DIR"
_e_var_select_scene = ExtResource("3_1xxyo")

[node name="Backwards" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="2" instance=ExtResource("2_ryuio")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_BACKWARDS"
_e_var_select_scene = ExtResource("3_1xxyo")

[node name="Anim_All" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="3" instance=ExtResource("4_iycfs")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_ANIM"
_e_var_select_scene = ExtResource("3_1xxyo")

[node name="Anim_Keep_Dir" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="4" instance=ExtResource("5_hjtsj")]
layout_mode = 2

[node name="Speed" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="5" instance=ExtResource("6_2ctf1")]
layout_mode = 2
_e_display_value = true
_e_heading_loc_id = "DEBUG_CUTSCENES_SPEED"
_e_var_select_scene = ExtResource("3_1xxyo")

[node name="Value" parent="Window/Contents/Margin/HBox/Right/Options/VBox/Speed" index="1"]
max_value = 5.0
step = 0.1
value = 1.0
tick_count = 6
ticks_on_borders = true

[node name="Wait_Finish" parent="Window/Contents/Margin/HBox/Right/Options/VBox" index="6" instance=ExtResource("2_ryuio")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_WAIT_FINISH"
_e_var_select_scene = ExtResource("3_1xxyo")

[node name="Value" parent="Window/Contents/Margin/HBox/Right/Options/VBox/Wait_Finish" index="1"]
button_pressed = true

[editable path="Window"]
[editable path="Window/Contents/Margin/HBox/Left/Preview"]
[editable path="Window/Contents/Margin/HBox/Right/Options/VBox/Speed"]
[editable path="Window/Contents/Margin/HBox/Right/Options/VBox/Wait_Finish"]
